bk_ida/gccida/g2/cselib_lookup_mem
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/cselib.c:1211:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/cselib.c:1223:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[*( ( unsigned __int8 *)x + 2)] & 0xFFFFFFFB) == 2 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/cselib.c:1224:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/cselib.c:1248:49: error: use of undeclared identifier 'hash_table_0'
*( _QWORD *)htab_find_slot_with_hash( ( __int64)hash_table_0, ( __int64)v3, value, 1) = elt; 
                                                ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_lookup_mem/src/obj/cselib.o] Error 1
